<resources>
    <string name="app_name">Notes</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>
    <string name="title">Title</string>
    <string name="warning">Warning</string>
    <string name="folderName">notes</string>
    <string name="imageDescription">Image</string>
    <string name="imageError">Error</string>
    <string name="checkListAddItem">…</string>
    <string name="hidden">Hidden</string>
    <string name="update">Update</string>
    <string name="moveTo">Move To…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="enter">Enter</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="itemRemoved">Item Removed</string>
    <string name="oldPassword">Old Password…</string>
    <string name="enterNewPassword">New Password…</string>
    <string name="reEnterNewPassword">Re Enter Password…</string>
    <string name="password">Password…</string>
    <string name="headingNotes">Notes</string>
    <string name="headingFolder">Folders</string>
    <string name="editingDate">Editing Date</string>
    <string name="editedHead">edited %1$s</string>
    <string name="newNote">Note</string>
    <string name="addNote">Add Note</string>
    <string name="editNote">Edit Note</string>
    <string name="createNote">New Note</string>
    <string name="serach">Search</string>
    <string name="searchHint">Search folder and notes…</string>
    <string name="audioStartRecording">Start Recording</string>
    <string name="audioRecording">Recording</string>
    <string name="audioStopRecording">Stop Recording</string>
    <string name="errorNoInternet">No Internet</string>
    <string name="errorRetry">Retry</string>
    <string name="errorNoFolderName">Enter the folder name</string>
    <string name="errorNopassword">Enter a valid password</string>
    <string name="errorPasswordNoMatch">Please enter the same password again</string>
    <string name="emptyStateEmpty">No notes yet\n Tap the "+" to get started</string>
    <string name="emptyStateSearch">No notes or folder matched %1$s</string>
    <string name="emptyStateSearchNoString">Enter a word to start the search</string>
    <string name="shortcutAddNoteShortMsg">Add Note</string>
    <string name="shortcutAddNoteLongMsg">Add Note</string>
    <string name="shortcutAddNoteDisabledMsg" translatable="false">Error</string>
    <string name="shortcutSearchShortMsg">Search</string>
    <string name="shortcutSearchLongMsg">Search</string>
    <string name="shortcutSearchDisabledMsg">Error</string>
    <string name="navItem1">My Notes</string>
    <string name="navItem2">Stared</string>
    <string name="navItem3">Vault</string>
    <string name="navItem4">Settings</string>
    <string name="navItem5">About</string>
    <string name="intentFolderName">intFldNmKy</string>
    <string name="homefldnm">hmfldnm</string>
    <string name="newnotefolderbundle">newntbd</string>
    <string name="bundleStringImageArray">bundImgArr</string>
    <string name="bundleIntentImage">bndImgs</string>
    <string name="bundleArrayListPosition">intImgPos</string>
    <string name="bundleNoteSerialObject">bndSrNtObj</string>
    <string name="bundleNoteSerialId">bndSrNtId</string>
    <string name="bundleCreateFolderParentFolder">bundleCreateFolderParentFolder</string>
    <string name="bundleListFragmentFolderName">bundleListFragmentFolderName</string>
    <string name="bundleNoteEntity">bundleNoteEntity</string>
    <string name="bundleFolderEntity">bundleFolderEntity</string>
    <string name="bundleReceiveIntentText">bundleReceiveIntentText</string>
    <string name="bundleReceiveIntentImage">bundleReceiveIntentImage</string>
    <string name="bundleReceiveIntentImageList">bundleReceiveIntentImageList</string>
    <string name="bundleEntityCurrentFolder">bundleEntityFolder</string>
    <string name="bundleEntityParentFolder">bundleEntityParentFolder</string>
    <string name="bundleItemToMovePosition">bundleItemToMovePosition</string>
    <string name="bundleNoteTitlePayback">bundleNoteTitlePayback</string>
    <string name="bundleNoteBodyPayback">bundleNoteBodyPayback</string>
    <string name="bundleNoteImagePayback">bundleNotImageePayback</string>
    <string name="bundleImageList">bundleImageList</string>
    <string name="bundleImageListPosition">bundleImageListPosition</string>
    <string name="bundleItemType">bundleItemType</string>
    <string name="bundleItemPosition">bundleItemPosition</string>
    <string name="bundleItemEvent">bundleItemEvent</string>
    <string name="bundleIntroWatched">bundleIntroWatched</string>
    <string name="menuNoteSave">Save</string>
    <string name="menuNoteDelete">Delete</string>
    <string name="menuNoteStar">Star</string>
    <string name="menuNoteLock">Lock</string>
    <string name="noteToolsDate">Date</string>
    <string name="noteToolCheckList">CheckList</string>
    <string name="noteToolCamera">Camera</string>
    <string name="noteToolAttachment">Attachment</string>
    <string name="noteToolAudio">Audio</string>
    <string name="noteToolReminder">Reminder</string>
    <string name="noteToolColor">Color</string>
    <string name="createFolder">New Folder</string>
    <string name="newfoldername">Folder Name</string>
    <string name="newfoldercreated"> New Folder Created</string>
    <string name="newfoldernotcreated">Error while creating new folder</string>
    <string name="noCamera">No Camera Application Found</string>
    <string name="noGallery">No Gallery Application Found</string>
    <string name="insertedNote">Note Saved</string>
    <string name="insertFailed">Error while saving note</string>
    <string name="updateNote">Note Updated</string>
    <string name="updateFailed">Error while updating note</string>
    <string name="noNote">Cannot Save Empty Note</string>
    <string name="noTitle">Cannot Save Note Without Title</string>
    <string name="popUpStar">Change Star</string>
    <string name="popUpLock">Change Lock</string>
    <string name="popUpEdit">Edit</string>
    <string name="popUpMoveTo">Move To</string>
    <string name="popUpShare">Share</string>
    <string name="popUpDelete">Delete</string>
    <string name="sortPopUpDate">Sort by date</string>
    <string name="sortPopUpLock">Sort by lock</string>
    <string name="sortPopUpPin">Sort by pin</string>
    <string name="dbMessageInsertFailed">Error while inserting</string>
    <string name="dbMessageInsertSuccessful">Insert Successful</string>
    <string name="dbMessageUpdateFailed">Error while updating</string>
    <string name="dbMessageUpdateSuccessful">Update Successful</string>
    <string name="dbMessageDeleteFailed">Error while deleting</string>
    <string name="dbMessageDeleteSuccessful">Deleted</string>
    <string name="deleteSingleNoteWarning">Are you sure you want to delete this note ?</string>
    <string name="deleteSingleFolderWarning">Are you sure you want to delete this folder, this will also delete all notes within this folder ?</string>
    <string name="deleteNoteFailed">Error while deleting note</string>
    <string name="notificationTitle">notifytitle</string>
    <string name="notificationContent">notifycontent</string>
    <string name="adAdMobId" translatable="false">ca-app-pub-7505114900190126~7627553023</string>
    <string name="adAdUnitId" translatable="false">ca-app-pub-7505114900190126/9104286220</string>
    <string name="notificationChannelReminderId">notificationChannelReminderId</string>
    <string name="notificationChannelReminder">notificationChannelReminder</string>
    <string name="notificationChannelReminderDescription">Enable reminder notifications</string>
    <string name="aboutLibraries">Third party library used</string>
    <string name="aboutLibrariesHead">Notes is built with the help of these great libraries</string>
    <string name="aboutLicense">License Info</string>
    <string name="aboutLicenseUrl" translatable="false">https://github.com/nsnikhil/Notes/blob/master/LICENSE</string>
    <string name="aboutApp">It\'s my little playground</string>
    <string name="aboutNikhil" translatable="false">Notes is written by Nikhil Soni\n
                   <a href="https://twitter.com/imnsnik">Twitter</a>|<a href="https://github.com/nsnikhil/">Github</a> </string>
    <string name="aboutSourceCode" translatable="false">The source code is available on <a href="https://github.com/nsnikhil/Notes">Github</a></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preferenceCategoryGeneral">General</string>
    <string name="preferenceCategoryData">Data</string>
    <string name="preferenceCategoryInterface">Interface</string>
    <string name="preferenceCategorySecurity">Security</string>
    <string name="preferenceCategoryPrivacy">Privacy</string>
    <string name="preferenceDarkMode">Dark Mode</string>
    <string name="preferenceBackup">Backup Data</string>
    <string name="preferenceRestore">Restore Data</string>
    <string name="preferenceChangeCode">Change Code</string>
    <string name="preferenceChangeCodeSummary">Change Security Code</string>
    <string name="preferenceErrorReporting">Error Reporting</string>
    <string name="preferenceErrorReportingSummary">Send crash reports to the developer to help him improve the application.</string>
    <string name="preferenceSendData">Share anonymous data</string>
    <string name="preferenceSendDataSummary">Share non-sensitive data with the developer to help improve the app.</string>
    <string name="preferenceBackupSummary">Backup data to local storage or cloud</string>
    <string name="preferenceRestoreSummary">Restore data from local storage or cloud</string>
    <string name="preferenceDarkModeKey">darkModeKey</string>
    <string name="preferenceChangeCodeKey">changeCodeKey</string>
    <string name="dialogPasswordFieldHint">Password…</string>
    <string name="dialogPasswordShowPassword">Show Password</string>
    <string name="sharedPreferencePasswordKey">sharedPreferencePasswordKey</string>
    <string name="sharedPreferencePublicKey">sharedPreferencePublicKey</string>
    <string name="sharedPreferencePrivateKey">sharedPreferencePrivateKey</string>
    <string name="preferenceNoValidError">Please enter a password between 1 – 8 characters</string>
</resources>