<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newNoteMenuSave"
        android:icon="@drawable/ic_done_black_48dp"
        android:title="@string/menuNoteSave"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/newNoteMenuStar"
        android:icon="@drawable/ic_star_black_48dp"
        android:title="@string/menuNoteStar"
        app:showAsAction="never" />

    <item
        android:id="@+id/newNoteMenuLock"
        android:icon="@drawable/ic_lock_black_48dp"
        android:title="@string/menuNoteLock"
        app:showAsAction="never" />

    <item
        android:id="@+id/newNoteMenuDelete"
        android:icon="@drawable/ic_delete_black_48dp"
        android:title="@string/menuNoteDelete"
        app:showAsAction="never" />

</menu>
