<?xml version="1.0" encoding="utf-8"?><!--
  ~     Notes  Copyright (C) 2018  Nikhil Soni
  ~     This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
  ~     This is free software, and you are welcome to redistribute it
  ~     under certain conditions; type `show c' for details.
  ~
  ~ The hypothetical commands `show w' and `show c' should show the appropriate
  ~ parts of the General Public License.  Of course, your program's commands
  ~ might be different; for a GUI interface, you would use an "about box".
  ~
  ~   You should also get your employer (if you work as a programmer) or school,
  ~ if any, to sign a "copyright disclaimer" for the program, if necessary.
  ~ For more information on this, and how to apply and follow the GNU GPL, see
  ~ <http://www.gnu.org/licenses/>.
  ~
  ~   The GNU General Public License does not permit incorporating your program
  ~ into proprietary programs.  If your program is a subroutine library, you
  ~ may consider it more useful to permit linking proprietary applications with
  ~ the library.  If this is what you want to do, use the GNU Lesser General
  ~ Public License instead of this License.  But first, please read
  ~ <http://www.gnu.org/philosophy/why-not-lgpl.html>.
  -->

<!-- TODO FIX THIS MESS-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/matchParent">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/matchParent">

        <TextView
            android:id="@+id/prefHeadingInterface"
            style="@style/prefHeading"
            android:text="@string/preferenceCategoryInterface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/prefItemDarkMode"
            style="@style/prefItem"
            android:checked="false"
            android:enabled="false"
            android:text="@string/preferenceDarkMode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefHeadingInterface" />

        <View
            android:id="@+id/prefInterfaceDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefItemDarkMode" />

        <TextView
            android:id="@+id/prefHeadingData"
            style="@style/prefHeading"
            android:text="@string/preferenceCategoryData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefInterfaceDivider" />

        <TextView
            android:id="@+id/prefItemBackupData"
            style="@style/prefItem"
            android:text="@string/preferenceBackup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefHeadingData" />

        <TextView
            android:id="@+id/prefItemRestoreData"
            style="@style/prefItem"
            android:text="@string/preferenceRestore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefItemBackupData" />

        <View
            android:id="@+id/prefSecurityData"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefItemRestoreData" />

        <TextView
            android:id="@+id/prefHeadingSecurity"
            style="@style/prefHeading"
            android:text="@string/preferenceCategorySecurity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefSecurityData" />

        <TextView
            android:id="@+id/prefItemChangePassword"
            style="@style/prefItem"
            android:text="@string/preferenceChangeCodeSummary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefHeadingSecurity" />

        <View
            android:id="@+id/prefSecurityDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefItemChangePassword" />

        <TextView
            android:id="@+id/prefHeadingPrivacy"
            style="@style/prefHeading"
            android:text="@string/preferenceCategoryPrivacy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefSecurityDivider" />

        <Switch
            android:id="@+id/prefItemPrivacyErrorReport"
            style="@style/prefItem"
            android:layout_height="wrap_content"
            android:checked="true"
            android:enabled="false"
            android:text="@string/preferenceChangeCodeSummary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefHeadingPrivacy" />

        <Switch
            android:id="@+id/prefItemPrivacySendData"
            style="@style/prefItem"
            android:layout_height="wrap_content"
            android:checked="true"
            android:enabled="false"
            android:text="@string/preferenceChangeCodeSummary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefItemPrivacyErrorReport" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/eight"
            android:background="@color/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefItemPrivacySendData" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>