<!--
  ~     Notes  Copyright (C) 2018  Nikhil Soni
  ~     This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
  ~     This is free software, and you are welcome to redistribute it
  ~     under certain conditions; type `show c' for details.
  ~
  ~ The hypothetical commands `show w' and `show c' should show the appropriate
  ~ parts of the General Public License.  Of course, your program's commands
  ~ might be different; for a GUI interface, you would use an "about box".
  ~
  ~   You should also get your employer (if you work as a programmer) or school,
  ~ if any, to sign a "copyright disclaimer" for the program, if necessary.
  ~ For more information on this, and how to apply and follow the GNU GPL, see
  ~ <http://www.gnu.org/licenses/>.
  ~
  ~   The GNU General Public License does not permit incorporating your program
  ~ into proprietary programs.  If your program is a subroutine library, you
  ~ may consider it more useful to permit linking proprietary applications with
  ~ the library.  If this is what you want to do, use the GNU Lesser General
  ~ Public License instead of this License.  But first, please read
  ~ <http://www.gnu.org/philosophy/why-not-lgpl.html>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/eight"
    tools:context="com.nrs.nsnik.notes.view.fragments.dialogFragments.PasswordDialogFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordDialogTextContainerOld"
        style="@style/matchParent"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordDialogTextOld"
            style="@style/matchParent"
            android:layout_margin="@dimen/eight"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="8"
            android:maxLines="1"
            android:minWidth="300dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordDialogTextContainer"
        app:layout_constraintTop_toBottomOf="@id/passwordDialogTextContainerOld"
        style="@style/matchParent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordDialogText"
            style="@style/matchParent"
            android:layout_margin="@dimen/eight"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLength="8"
            android:maxLines="1"
            android:minWidth="300dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/passwordDialogShowPassword"
        style="@style/wrapContent"
        android:layout_marginTop="@dimen/sixteen"
        android:visibility="gone"
        android:text="@string/dialogPasswordShowPassword"
        app:layout_constraintTop_toBottomOf="@id/passwordDialogTextContainer" />


    <Button
        android:id="@+id/passwordDialogCreate"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordDialogShowPassword" />

    <Button
        android:id="@+id/passwordDialogCancel"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/passwordDialogCreate"
        app:layout_constraintTop_toBottomOf="@id/passwordDialogShowPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
